--- a/nginx.conf
+++ b/nginx.conf
@@ -5,14 +5,19 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Serve social.org as plain text
+    location = /social.org {
+        default_type text/plain;
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
     }
 
     # Cache static assets
     location ~* \.(css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+        expires 1d;
+        add_header Cache-Control "public";
     }
 
     # Gzip compression
